panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__call__test_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      f~0 `fn(x: int) -> int`
      (params
         x~1 `int`)
      (compound-statement
         (return (x~1 `int`))))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (definition x~3 `int` (42 `int`))
         (definition y~4 `int`
            (call `int`
               (addressof `ptr<fn(x: int) -> int>`
                  (f~0 `fn(x: int) -> int`))
               (x~3 `int`)))
         (return (y~4 `int`)))))

----- stderr -----
