panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__call__test_standard_lib_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_standard_lib_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration isalnum~1 `fn(∅: int) -> int` ∅)
         (return
            (not-equal `int`
               (call `int`
                  (addressof `ptr<fn(∅: int) -> int>`
                     (isalnum~1 `fn(∅: int) -> int`))
                  (100 `int`))
               (0 `int`))))))

----- stderr -----
