panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__call__test_void_return.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/call/test_void_return.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~0 `fn() -> void`)))))))

----- stderr -----
